fixed media query width; fixed app background bleed through on mobile; added more options to common wrapper; set boilerplate for teams layout

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body {
 
 *::-webkit-scrollbar {
   width: 0.2em;
+  height: 0.2em;
 }
 
 *::-webkit-scrollbar-track {
